[project]
name = "openai-agent-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentsdk-gemini-adapter>=0.1.0",
    "chainlit>=2.6.0",
    "dotenv>=0.9.9",
    "litellm>=1.74.0",
    "openai>=1.93.0",
    "openai-agents>=0.1.0",
    "requests>=2.32.3",
]
